[gd_scene load_steps=3 format=3 uid="uid://dn2v30hm8rulj"]

[ext_resource type="Script" uid="uid://broprhkxt1p6m" path="res://scripts/auth.gd" id="1_dnl36"]
[ext_resource type="Script" uid="uid://pm8xl5pstusj" path="res://scripts/login_screen.gd" id="1_umwdc"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_umwdc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -64.0
offset_right = 69.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmailInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "Email"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
placeholder_text = "Senha"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RegisterButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Cadastrar"

[node name="LoginButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Login"

[node name="LogoutButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Sair"

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Auth" type="Node" parent="."]
script = ExtResource("1_dnl36")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
